Ahora el programa se ejecuta y calcula un número determinado de partidas. La estratégia de cada jugador todavía no permite decidir si robar o no. Es decir, el jugador sólamente roba una carta si es estríctamente necesario. Todavía falta por implementar una estratégia para los jugadores. Falta por implementar un sistema para recolectar el resultado de los puntos de manera automática.